@@ -1,3 +1,14 @@
+2004-09-23  MenTaLguY <mental@rydia.net>
+
+	* src/gc-core.h, src/display/nr-arena-glyphs.cpp, src/display/nr-arena-group.cpp,
+	  src/display/nr-arena-item.cpp, src/display/nr-arena-item.h,
+	  src/display/nr-arena-shape.cpp, src/libnr/nr-object.cpp, src/libnr/nr-object.h,
+
+	  eliminate more sources of leaks; managed objects shouldn't use refcounts
+	  among themselves
+
+	* src/xml/repr.cpp: don't nuke log pointer
+
 2004-09-21  MenTaLguY <mental@rydia.net>
 
 	* src/gc-finalized.h: fix for stupid bug preventing finalizable objects
